--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
       "name": "Firefox: Launch localhost",
       "type": "firefox",
       "request": "launch",
-      "url": "http://127.0.0.1:8000/app.php",
+      "url": "http://127.0.0.1:8000/",
       "webRoot": "${workspaceFolder}",
       "profile": "devel"
     }
