--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,7 +17,7 @@
         "-S",
         "127.0.0.1:8000",
         "-t",
-        "${workspaceFolder}"
+        "${workspaceFolder}/public"
       ],
       "options": {
         "cwd": "${workspaceFolder}"
